MDEV-5131 create_embedded_thd is not thread safe, libmysqld.         LOCK_thread_count locked when we do threads.append().